@@ -18,7 +18,7 @@
 #define MAX(X,Y)      (((X) > (Y)) ? (X) : (Y))
 #define MIN(X,Y)      (((X) < (Y)) ? (X) : (Y))
 
-static char software_version[] = "$Id: rpc_ct_setparam.c,v 1.8 2005/07/26 13:04:55 freddy77 Exp $";
+static char software_version[] = "$Id: rpc_ct_setparam.c,v 1.9 2006/12/29 19:00:33 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 CS_RETCODE ex_clientmsg_cb(CS_CONTEXT * context, CS_CONNECTION * connection, CS_CLIENTMSG * errmsg);
@@ -29,7 +29,7 @@ static CS_INT ex_display_results(CS_COMMAND * cmd);
 
 typedef struct _ex_column_data
 {
-	CS_INT indicator;
+	CS_SMALLINT indicator;
 	CS_CHAR *value;
 	CS_INT valuelen;
 }
@@ -423,7 +423,7 @@ int i, j;
 				}
 
 				ret = ct_bind(cmd, (i + 1), &outdatafmt[i], coldata[i].value, &coldata[i].valuelen,
-					      (CS_SMALLINT *) & coldata[i].indicator);
+					      & coldata[i].indicator);
 				if (ret != CS_SUCCEED) {
 					fprintf(stderr, "ct_bind failed \n");
 					return 1;
